tests/semantic/ifstmt_err3.expected

Semantic Error [line 6]: value: "sc1_test"
	Unexpected l-value type: 
Expected type(s) 'Integer' or 'Boolean'; found 'String' instead.
