tests/semantic/ifstmt_err3.mtp
(*Test if condition with non-Boolean value*)
const test := 'error';
var a, b: integer;

begin
	if test > b then
	   write('Hello')
	;
end.